# stock-drawdown-chart-web

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.forecast  GEMINI.md  Procfile  README.md  cloudbuild.forecast.yaml  cloudbuild.web.yaml  forecast_service.py  pyproject.toml  stock_drawdown_app.py
.github/workflows/: deploy-cloud-run.yml  test.yml
data/: jp_security_names.csv  jpx_market_cap_top100_latest.csv  market_crashes.csv  nikkei225_constituents.csv
infra/gcp/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
spec/: README.md
spec/candlestick-technical-indicators/: design.md  implementation.md  requirements.md  tasks.md  verification.md
spec/cloud-run-deployment/: design.md  implementation.md  requirements.md  tasks.md  verification.md
spec/drawdown-forecasting/: design.md  implementation.md  requirements.md  tasks.md  verification.md
spec/google-login-public-access/: design.md  implementation.md  requirements.md  tasks.md  verification.md
spec/jquants-user-api-provider/: design.md  implementation.md  requirements.md  tasks.md  verification.md
spec/manual-refresh-market-cache/: design.md  implementation.md  requirements.md  tasks.md  verification.md
spec/mvp-drawdown-board/: design.md  implementation.md  requirements.md  tasks.md  verification.md
static/: app.js  index.html  manifest.webmanifest  styles.css
tests/: test_drawdown.py  test_forecast_service.py  test_jquants.py  test_jquants_optimization.py  test_market_cache.py  test_public_analysis.py  test_seo.py
(+16 files in other folders)
